# OpenGLStuff

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
lib/: glm-0.9.8.1.7z
src/: main.cpp  texturemanager.h
src/Camera/: camera.cpp  camera.h  cartesiancamera.cpp  cartesiancamera.h  sphericalcamera.cpp  sphericalcamera.h
src/GUI/: eventsHandling.cpp  gui.cpp  gui.h  view.cpp  view.h
src/GUI/SDL/: eventcontroller.cpp  eventcontroller.h  windowmanager.cpp  windowmanager.h
src/Graph/: drawablenode.cpp  drawablenode.h  node.cpp  node.h  transformnode.cpp  transformnode.h
src/MainApp/: mainapplication.cpp  mainapplication.h
src/Models/: model.cpp  model.h  renderingmodel.cpp  renderingmodel.h  texturemanager.cpp  texturemanager.h
src/Models/Lights/: lightsource.cpp  lightsource.h  pointlightsource.cpp  pointlightsource.h
src/Models/Loaders/: assimploader.cpp  assimploader.h  basicloader.cpp  basicloader.h  cubeloader.cpp  cubeloader.h  cylinderloader.cpp  cylinderloader.h  loader.cpp  loader.h  objectdatastorage.cpp  objectdatastorage.h  wheelloader.cpp  wheelloader.h
src/Models/Renders/: car.cpp  car.h  customscene.cpp  customscene.h  material.cpp  material.h  rendermodel.cpp  rendermodel.h  renderscene.cpp  renderscene.h  teapot.cpp  teapot.h
src/Models/Textures/: pixelsbuffer.cpp  pixelsbuffer.h  texturemanager.cpp  texturemanager.h
src/Shaders/: shadercollection.cpp  shadercollection.h  shaderprogram.cpp  shaderprogram.h  shaderutils.cpp  shaderutils.h
src/Shaders/src/: fragmentShader.frag  vertexShader.vert
src/Tools/: convert.h  frames.cpp  frames.h  general.h  mouse.cpp  mouse.h  pixelbuffer.h  singleton.h  stringalgorithms.h
src/Transforms/: transform.cpp  transform.h
